
* The Monitor dockable provides buttons to request a full garbage
collection and sharing of live data on the ML heap. It also includes
information about the Java Runtime system.

* Update to jedit-5.6.0, the latest release. This version works properly
on macOS by default, without the special MacOSX plugin.


*** Document preparation ***

* The standard LaTeX engine is now lualatex, according to settings
variable ISABELLE_PDFLATEX. This is mostly upwards compatible with old
pdflatex, but text encoding needs to conform strictly to utf8. Rare
INCOMPATIBILITY.

* Discontinued obsolete DVI format and ISABELLE_LATEX settings variable:
document output is always PDF.

* Antiquotation @{bash_function} refers to GNU bash functions that are
checked within the Isabelle settings environment.

* Antiquotations @{scala}, @{scala_object}, @{scala_type},
@{scala_method} refer to checked Isabelle/Scala entities.


*** Pure ***

* Session Pure-Examples contains notable examples for Isabelle/Pure
(former entries of HOL-Isar_Examples).

* Definitions in locales produce rule which can be added as congruence
rule to protect foundational terms during simplification.

* Consolidated terminology and function signatures for nested targets:

  * Local_Theory.begin_nested replaces Local_Theory.open_target.

  * Local_Theory.end_nested replaces Local_Theory.close_target.

  * Combination of Local_Theory.begin_nested and
    Local_Theory.end_nested(_result) replaces
    Local_Theory.subtarget(_result).

INCOMPATIBILITY.

* Local_Theory.init replaces Generic_Target.init.  Minor INCOMPATIBILITY.


*** HOL ***

* An updated version of the veriT solver is now included as Isabelle
component. It can be used in the "smt" proof method via "smt (verit)" or
via "declare [[smt_solver = verit]]" in the context; see also session
HOL-Word-SMT_Examples.

* Nitpick/Kodkod may be invoked directly within the running
Isabelle/Scala session (instead of an external Java process): this